--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -18,6 +19,7 @@
     "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-component-export-image": "^0.1.7",
     "react-dom": "^16.13.1",
     "react-html-table-to-excel": "^2.0.0",
     "react-number-format": "^4.4.1",
